--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "jest": "^26.6.3",
+        "node-fetch": "^2.6.1",
         "puppeteer": "^8.0.0"
     }
 }
