--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-    "name": "codeceptjs-tests",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "codeceptjs": "codeceptjs run --steps",
-        "codeceptjs:headless": "HEADLESS=true codeceptjs run --steps",
-        "codeceptjs:ui": "codecept-ui --app",
-        "codeceptjs:demo": "codeceptjs run --steps -c node_modules/@codeceptjs/examples",
-        "codeceptjs:demo:headless": "HEADLESS=true codeceptjs run --steps -c node_modules/@codeceptjs/examples",
-        "codeceptjs:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples"
-    },
-    "devDependencies": {
-        "@codeceptjs/configure": "^0.6.2",
-        "@codeceptjs/examples": "^1.2.1",
-        "@codeceptjs/ui": "^0.4.3",
-        "codeceptjs": "^3.0.5",
-        "playwright": "^1.10.0"
-    },
-    "dependencies": {
-        "jest": "^26.6.3",
-        "node-fetch": "^2.6.1",
-        "puppeteer": "^8.0.0"
-    }
+  "name": "codeceptjs-tests",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "codeceptjs": "codeceptjs run --steps",
+    "codeceptjs:headless": "HEADLESS=true codeceptjs run --steps",
+    "codeceptjs:ui": "codecept-ui --app",
+    "codeceptjs:demo": "codeceptjs run --steps -c node_modules/@codeceptjs/examples",
+    "codeceptjs:demo:headless": "HEADLESS=true codeceptjs run --steps -c node_modules/@codeceptjs/examples",
+    "codeceptjs:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples"
+  },
+  "devDependencies": {
+    "@codeceptjs/configure": "^0.6.2",
+    "@codeceptjs/examples": "^1.2.1",
+    "@codeceptjs/ui": "^0.4.3",
+    "codeceptjs": "^3.0.5",
+    "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "@types/node-fetch": "2.5.10",
+    "jest": "^26.6.3",
+    "node-fetch": "^2.6.1",
+    "puppeteer": "^8.0.0",
+    "ts-node": "^9.1.1"
+  }
 }
