--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "types": ["codeceptjs", "./steps.d.ts"],
     "allowJs": false
   }
